--- a/angular/src/app/pages/roadmap/roadmap.component.sass
+++ b/angular/src/app/pages/roadmap/roadmap.component.sass
@@ -86,7 +86,9 @@ input.ng-touched.ng-invalid
     opacity: 1
 
 .date-end
-  color: #091b1f
+  color: white
 .cv-print
   margin-left: 15px
   color: white
+.not-yet-evaluate
+  background-color: brown
