--- a/angular/src/app/pages/trend-detail/trend-detail.component.sass
+++ b/angular/src/app/pages/trend-detail/trend-detail.component.sass
@@ -4,8 +4,10 @@
   .source-type
     padding-left: 20px
     span
-      color: #89efa8
-      border: 1px solid #666666
+      padding: 10px
+      color: black
+      background: cornsilk
+      margin-right: 10px
   .evalution-user
     margin-bottom: 10px
     border: 1px dotted #89efa8
