--- a/angular/src/app/pages/roadmap/roadmap.component.html
+++ b/angular/src/app/pages/roadmap/roadmap.component.html
@@ -90,7 +90,7 @@
              tooltip="{{item.title}} - {{item.description}}"
                [style.left.%]="item.left"
                [style.width.%]="item.widthprozent"
-               [style.background-color]="getColor(i)"
+               [style.background-color]="'blue'"
 
           >
             {{item.id}}.{{item.title}}
@@ -124,7 +124,7 @@
                tooltip="{{item.title}} - {{item.description}}"
                [style.left.%]="item.left"
                [style.width.%]="item.widthprozent"
-               [style.background-color]="getColor(i)"
+               [style.background-color]="'#ffc107'"
 
             >
               {{item.id}}.{{item.title}}
@@ -152,7 +152,7 @@
                tooltip="{{item.title}} - {{item.description}}"
                [style.left.%]="item.left"
                [style.width.%]="item.widthprozent"
-               [style.background-color]="getColor(i)"
+               [style.background-color]="'red'"
             >
               {{item.id}}.{{item.title}}
 
@@ -166,7 +166,7 @@
     <div class="clearfix"></div>
     <!--    ---------------------------------------------------------rm-un Evalution low -->
     <div class="rm-low col-lg-12 col-md-12 col-sm-12">
-      <div class="left col-lg-1 col-md-1 col-sm-12 bg-danger float-left" tooltip="This trends would have a evaluation in the next days">
+      <div class="left col-lg-1 col-md-1 col-sm-12 not-yet-evaluate float-left" tooltip="This trends would have a evaluation in the next days">
         Not yet Evaluation
       </div>
 
@@ -180,7 +180,7 @@
                (click)="routerOtherPage(item.id)"
                 [style.left.%]="item.left"
                 [style.width.%]="item.widthprozent"
-                [style.background-color]="getColor(i)"
+                [style.background-color]="'brown'"
 
             >
               {{item.id}}.{{item.title}}
