add animation for radar and commented all code

--- a/angular/src/app/pages/roadmap/roadmap.component.html
+++ b/angular/src/app/pages/roadmap/roadmap.component.html
@@ -128,7 +128,7 @@
 
             >
               {{item.id}}.{{item.title}}
-              <br> <span class="text-warning">{{ShowDate( item.start)}}</span> - <span class="date-end">{{ ShowDate(item.end)}}</span>
+              <br> <span class="text-info">{{ShowDate( item.start)}}</span> - <span class="date-end">{{ ShowDate(item.end)}}</span>
             </p>
           </div>
         </ng-container>
