--- a/angular/src/app/shared/home_child/introduction/introduction.component.sass
+++ b/angular/src/app/shared/home_child/introduction/introduction.component.sass
@@ -2,3 +2,11 @@
   height: 700px
   img
     height: 700px
+.container
+  text-align: center
+.carousel-control-next-icon, .carousel-control-prev-icon
+  background-color: red !important
+.carousel-control-next-icon
+  left: -80px
+.carousel-control-prev-icon
+  right: -80px
