--- a/angular/src/app/shared/home_child/partner/partner.component.html
+++ b/angular/src/app/shared/home_child/partner/partner.component.html
@@ -1,8 +1,16 @@
 <div class="partner">
   <mat-grid-list cols="2" rowHeight="2:1">
-    <mat-grid-tile style="background: antiquewhite">Amazon</mat-grid-tile>
-    <mat-grid-tile style="background: darkgray">Ebay</mat-grid-tile>
-    <mat-grid-tile style="background: antiquewhite">Google</mat-grid-tile>
-    <mat-grid-tile style="background: #89efa8">Facebook</mat-grid-tile>
+    <mat-grid-tile>
+      <img src="https://www.handelsblatt.com/images/amazon-logo-an-einem-logistikzentrum/25960230/4-format2020.jpg" alt="amazon">
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <img src="https://images.boersenmedien.com/images/a32801ed-237f-441a-9e84-ef927763ad8e.jpg" alt="Ebay">
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <img src="https://ewdvtw8.imgix.net/news/wp-content/uploads/2019/11/Google-Logo-2-Shutterstock.jpg?auto=format%2Ccompress&fit=crop&h=348&ixlib=php-2.3.0&q=75&w=620" alt="Google">
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3EyZUc8xK1mCCN7z_gpWRg_c0-ikRGmU28mmKJN4d7jFhFoQSWuAwK8UNh82JJCRBtA4&usqp=CAU" alt="Facebook">
+    </mat-grid-tile>
   </mat-grid-list>
 </div>
