--- a/angular/src/app/shared/comments/comments.component.html
+++ b/angular/src/app/shared/comments/comments.component.html
@@ -1,7 +1,7 @@
 <div id="mainDiv">
   <form [formGroup]="form" autocomplete="off" (ngSubmit)="addComment(form.value)">
     <div class="form-group">
-      <label>Write your comment:</label>
+      <label ngDefaultControl>Write your comment:</label>
       <ckeditor
         data="<p>Some initial data</p>"
         formControlName="content"
