--- a/angular/src/app/shared/comments/comments.component.html
+++ b/angular/src/app/shared/comments/comments.component.html
@@ -5,6 +5,7 @@
       <ckeditor
         data="<p>Some initial data</p>"
         formControlName="content"
+        ngDefaultControl
       ></ckeditor>
     </div>
 
