--- a/angular/src/app/shared/menu/menu.component.html
+++ b/angular/src/app/shared/menu/menu.component.html
@@ -66,6 +66,7 @@
         <a mat-button routerLink="portfolio" routerLinkActive="active-link" color="accent">Portfolio-Analyse</a>
         <a mat-button routerLink="roadmap" routerLinkActive="active-link" color="accent">Road Map</a>
         <a mat-button routerLink="trendradar" routerLinkActive="active-link" color="accent">Trend Radar</a>
+        <a mat-button routerLink="files" routerLinkActive="active-link" color="accent">Files Control</a>
       </ng-container>
 
     </div>
