modify design of home page

--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -1,8 +1,11 @@
 <app-slider></app-slider>
-<app-introduction></app-introduction>
+<!--<app-introduction></app-introduction>-->
 <app-partner></app-partner>
 <app-customer-comments></app-customer-comments>
-<!--
 <app-news></app-news>
+<app-funding></app-funding>
+
+<!--
+
 <app-newlester></app-newlester>
 -->
