--- a/angular/src/app/shared/footer/footer.component.html
+++ b/angular/src/app/shared/footer/footer.component.html
@@ -1,13 +1,20 @@
 <div class="clearfix"></div>
 <div class="footer row">
   <div class="footer-social">
-    <i class="fab fa-facebook f-fb"></i><a href="#">Facebook</a>
-    <i class="fab fa-twitter f-tw"></i><a href="#">Twiter</a>
-    <i class="fab fa-instagram f-in"></i><a href="#">Instagram</a>
+    <div class="footer-social-element">
+      <i class="fab fa-facebook f-fb"></i><a href="#">Facebook</a>
+    </div>
+    <div class="footer-social-element">
+        <i class="fab fa-twitter f-tw"></i><a href="#">Twiter</a>
+    </div>
+      <div class="footer-social-element">
+        <i class="fab fa-instagram f-in"></i><a href="#">Instagram</a>
+      </div>
   </div>
   <div class="footer-main row">
     <div class="col-xs-3 col-md-3 col-sm-3 col-lg-3 float-left">
-      <img src="../../../assets/images/logo.png" height="40" width="40"/> <br>
+      <p>Managing Director</p>
+      <hr>
       <i class="fas fa-phone"></i> 0176 2222 45555 <br>
       <i class="far fa-envelope"></i> vantinh@gmail.com <br>
       <i class="fas fa-map-marker-alt"></i> Lichtern Berg Berlin
@@ -15,6 +22,7 @@
 
     <div class="col-xs-3 col-md-3 col-sm-3 col-lg-3 float-left">
       <p>Information</p>
+      <hr>
       <ul>
         <li><a href="#">AGB</a></li>
         <li><a href="#">FAQ</a></li>
@@ -26,6 +34,7 @@
 
     <div class="col-xs-3 col-md-3 col-sm-3 col-lg-3 float-left">
       <p>Hotline & Contact</p>
+      <hr>
       <span> Do you have questions</span> <br>
       +(49)176 2222 45555 <br>
       <span>opening hours</span><br>
@@ -33,7 +42,8 @@
     </div>
 
     <div class="col-xs-3 col-md-3 col-sm-3 col-lg-3 float-left">
-      <p>Power By <a href="https://www.coninohealth.com/medtech-unternehmen" target="_blank" class="powerby">Conino Health</a></p><br>
+      <p>Power By <a href="https://www.coninohealth.com/medtech-unternehmen" target="_blank" class="powerby">Conino Health</a></p>
+      <hr>
       <span>info@coninohealth.de</span><br>
       <span>Coninostraße 11 – 10439 Berlin</span>
       <span>030 123 456</span>
