--- a/angular/src/app/shared/footer/footer.component.sass
+++ b/angular/src/app/shared/footer/footer.component.sass
@@ -4,6 +4,7 @@
   color: #737373
   display: flow-root
   width: 100%
+  padding: 20px
   a
     color: #737373
 
@@ -15,6 +16,14 @@
 
   .f-in
     color: burlywood
+  .footer-social
+    display: flex
+    margin: 20px 0
+    .footer-social-element
+      padding: 20px
+      i
+        font-size: 20px
+        margin-right: 5px
 
 .powerby
   color: blue !important
