--- a/angular/src/app/shared/home_child/news/news.component.html
+++ b/angular/src/app/shared/home_child/news/news.component.html
@@ -1,1 +1,12 @@
-<p>news works!</p>
+<div class="news container-fluid">
+  <h2>Trendradar Webssite has the highest level of trend simulation and analyse in the markt</h2>
+  <h3>Free Trial</h3>
+   <p>
+     Registration and enjoy 14 days of enhanced trendss detection. <br>
+
+     Get in touch with us and we will send easy step-by-step instructions on how to install and use the trends in the website.
+    </p>
+    <p>
+      <button class="btn btn-warning"> Get In Touch</button>
+    </p>
+</div>
