--- a/angular/src/app/shared/home_child/slider/slider.component.html
+++ b/angular/src/app/shared/home_child/slider/slider.component.html
@@ -1,3 +1,14 @@
 <div class="slider">
-  <p>Trendradar Die #1 der digitalen Innovationsplattformen für Start-Up und Großunternehmen</p>
+  <div class="col-lg-6 col-sm-12 float-left">
+    <img src="assets/slider/radar.jpg" alt="radar">
+  </div>
+  <div class="col-lg-6 col-sm-12 float-left">
+    <h1>Radar helps your company recognize current trends, helps your company invest more accurately, and eliminates wrong investment.</h1>
+    <br>
+    <p> We use new Technology to identify new trends. However, with our algorithmus you do not to care the process of analysis.
+      The result shows before you and you need just enjoy our research.</p>
+    <br>
+    <button class="btn btn-warning">Learnmore</button>
+  </div>
+  <div class="clearfix"></div>
 </div>
