--- a/angular/src/styles.sass
+++ b/angular/src/styles.sass
@@ -5,6 +5,7 @@ html, body
   margin: 0
 .content
   min-height: 100%
+  background-color:   #ffd42a0d
 input.ng-untouched.ng-valid
   boder: white
 input.ng-touched.ng-valid
