--- a/angular/src/app/pages/roadmap/roadmap.component.sass
+++ b/angular/src/app/pages/roadmap/roadmap.component.sass
@@ -9,6 +9,7 @@ input.ng-touched.ng-invalid
   border: 1px solid red
 
 .timeline
+  overflow-x: scroll
   .vt-year-col
     border: 1px solid #89efa8
     padding: 5px 7px
