--- a/angular/src/app/shared/home_child/slider/slider.component.sass
+++ b/angular/src/app/shared/home_child/slider/slider.component.sass
@@ -1,13 +1,13 @@
+//background-image: url("https://www.itonics-innovation.de/hubfs/shutterstock_1342435892.jpg")
 .slider
-  height: 400px
-  background-image: url("https://www.itonics-innovation.de/hubfs/shutterstock_1342435892.jpg")
+  img
+    width: 100%
+    max-width: 100%
+    border-radius: 2%
   p
-    line-height: 400px
-    font-size: 25px
-    color: white
-    text-align: center
+    font-size: 20px
+    text-align: left
   h1
-    line-height: 400px
+    margin-top: 20px
     font-size: 25px
-    color: white
-    text-align: center
+    text-align: left
