add: abstract for this project

--- a/angular/src/app/pages/portfolio/portfolio.component.html
+++ b/angular/src/app/pages/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container wrapper">
   <h3 class="border-light">Portfolio-Analyse with the matrix of <a href="https://www.marketinginstitut.biz/blog/portfolio-analyse-als-instrument-im-business-development/">McKinsey-Matrix</a></h3>
 <!--  <p><button class="btn btn-success btn-block" printSectionId="htmlData" ngxPrint>print</button></p>-->
   <button (click)="printService.mediaprint()" class="btn btn-info">click media print with css</button>
