--- a/angular/src/app/pages/trend-detail/trend-detail.component.sass
+++ b/angular/src/app/pages/trend-detail/trend-detail.component.sass
@@ -33,8 +33,10 @@
     margin-bottom: 10px
 
 .trend-vote
-    margin-bottom: 100px
-
+  clear: both
+  margin-bottom: 100px
+  .during
+    display: none
 
 .img-galaxy-detail
   width: 100%
